--- a/src/app/product-category/product-category.component.html
+++ b/src/app/product-category/product-category.component.html
@@ -25,7 +25,7 @@
             <p class="productcategory">{{prod.categoryName}}</p> 
             <p class="productcategory">{{prod.unitOfMeasure}}</p> 
             <p class="productcategory">{{prod.price}}</p>        
-            <img  routerLink="/cart" class="cart" src="../assets/icons/shoppingcart.svg" />
+            <img  routerLink="/cart" class="cart" src="../assets/icons/booknow.svg" />
           </td>
         </tr>
       </div>
