--- a/product/src/app/header/header.component.html
+++ b/product/src/app/header/header.component.html
@@ -1,13 +1,29 @@
-<div class="header">
-    <table>
-        <tr>
-            <td><a ><img routerLink="" src="../assets/GMART.png" /></a>
-    </tr>
-      <tr>
-        <td class="phrase">Your Wellness Home</td>
-                    <td  class="buton1" *ngFor="let menu of this.menus" class="col-md-4"  >
-                <button class="button1" routerLink="/{{menu.routerPath}}"  >{{menu.name}}</button>
-            </td>
-      </tr>
-    </table> 
-</div>
+<header class="spa-header">
+  <div class="header-top">
+    <div class="container">
+      <div class="header-content">
+        <div class="logo-section">
+          <a routerLink="/" class="logo-link">
+            <div class="logo-container">
+              <span class="logo-text">SpaInfinity</span>
+              <span class="logo-tagline">Your Wellness Sanctuary</span>
+            </div>
+          </a>
+        </div>
+        
+        <nav class="main-nav">
+          <ul class="nav-menu">
+            <li *ngFor="let menu of menus" class="nav-item">
+              <a [routerLink]="menu.routerPath" 
+                 routerLinkActive="active"
+                 [routerLinkActiveOptions]="{exact: menu.routerPath === ''}"
+                 class="nav-link">
+                {{menu.name}}
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
