added admin functionalities

--- a/product/src/app/app.component.html
+++ b/product/src/app/app.component.html
@@ -4,6 +4,7 @@
     <ul>
       <li><a routerLink="/book" routerLinkActive="active-link">Book Now</a></li>
       <li><a routerLink="/admin/bookings" routerLinkActive="active-link">Booking List (Admin)</a></li>
+      <li><a routerLink="/admin/services" routerLinkActive="active-link">Manage Services (Admin)</a></li>
     </ul>
   </nav>
 </header>
