--- a/product/src/app/booking-form/booking-form.component.css
+++ b/product/src/app/booking-form/booking-form.component.css
@@ -304,4 +304,12 @@ select.ng-invalid.ng-touched {
     align-items: flex-start;
     gap: 0.3rem;
   }
+  
+  .confirmation-note {
+  margin-top: 1.5rem;
+  padding-top: 1rem;
+  border-top: 1px dashed #2b613f;
+  font-size: 1.1rem;
+  color: #2b613f;
+}
 }
